--- a/_posts/2022-04-27-post.md
+++ b/_posts/2022-04-27-post.md
@@ -14,7 +14,8 @@ The university's military skill training for each freshman included "orienteerin
 
 The classic principle of orienteering is simple: you get a map from the start, and you need to arrive at each control points denoted in the map in the correct order as the the numbers indicates, and then reach the final to stop timing. In the process, you are not allowed to use any electronic devices that can help you locate, except for a compass. When comparing the rersults, first, you need to be valid. which means you didn't miss any point and reach all the controls with the correct order, then the person who used the shortest time will win.
 
-[My first orienteering map]<img src='/images/1stmap.jpg'>
+My first orienteering map:
+<img src='/images/1stmap.jpg'>
 
 For more contents about the basic rules and my experience about orienteering, I will post them in later blogs posts or portfolios.
 
